Remove Open Filter on Menu Button and fix alignment

--- a/src/Styles/TruckFilter.css
+++ b/src/Styles/TruckFilter.css
@@ -8,6 +8,9 @@
   bottom: 1rem;
   right: 1rem;
   z-index: 100;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .center-btn {
